k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-test
spec:
  selector:
    app: deploy-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
